update the container

--- a/ansible/roles/ec2_setup/tasks/main.yaml
+++ b/ansible/roles/ec2_setup/tasks/main.yaml
@@ -64,10 +64,16 @@
     docker pull {{ item.image }}
   loop: "{{ docker_images }}"
 
-- name: Run Docker containers conditionally based on inventory hostname
-  shell: |
-    docker run -d --name {{ item.container_name }} -p {{ item.port }} {{ item.image }}
+- name: Ensure Docker containers are running with latest image
+  community.docker.docker_container:
+    name: "{{ item.container_name }}"
+    image: "{{ item.image }}"
+    state: started
+    ports:
+      - "{{ item.port }}"
+    recreate: yes
   when: >
     (inventory_hostname == groups['ec2_instances'][0] and item.container_name == 'container1') or
     (inventory_hostname == groups['ec2_instances'][1] and item.container_name == 'container2')
   loop: "{{ docker_images }}"
+
