--- a/ansible/roles/ec2_setup/tasks/main.yaml
+++ b/ansible/roles/ec2_setup/tasks/main.yaml
@@ -1,3 +1,17 @@
+---
+- name: Update apt cache
+  apt:
+    update_cache: yes
+
+- name: Install required packages
+  apt:
+    name:
+      - apt-transport-https
+      - ca-certificates
+      - curl
+      - software-properties-common
+      - python3-pip
+    state: present
 
 - name: Install Docker
   apt:
